; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/crt/string/extr_mbstowcs_nt.c_mbstowcs.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/crt/string/extr_mbstowcs_nt.c_mbstowcs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @mbstowcs(i32* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = call i64 @strlen(i8* %11)
  %13 = trunc i64 %12 to i32
  store i32 %13, i32* %10, align 4
  %14 = load i32*, i32** %5, align 8
  %15 = icmp eq i32* %14, null
  br i1 %15, label %16, label %23

16:                                               ; preds = %3
  %17 = load i8*, i8** %6, align 8
  %18 = load i32, i32* %10, align 4
  %19 = call i32 @RtlMultiByteToUnicodeSize(i32* %9, i8* %17, i32 %18)
  %20 = load i32, i32* %9, align 4
  %21 = sext i32 %20 to i64
  %22 = udiv i64 %21, 4
  store i64 %22, i64* %4, align 8
  br label %41

23:                                               ; preds = %3
  %24 = load i32*, i32** %5, align 8
  %25 = load i64, i64* %7, align 8
  %26 = trunc i64 %25 to i32
  %27 = sext i32 %26 to i64
  %28 = mul i64 %27, 4
  %29 = trunc i64 %28 to i32
  %30 = load i8*, i8** %6, align 8
  %31 = load i32, i32* %10, align 4
  %32 = call i32 @RtlMultiByteToUnicodeN(i32* %24, i32 %29, i32* %9, i8* %30, i32 %31)
  store i32 %32, i32* %8, align 4
  %33 = load i32, i32* %8, align 4
  %34 = call i32 @NT_SUCCESS(i32 %33)
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %37, label %36

36:                                               ; preds = %23
  store i64 -1, i64* %4, align 8
  br label %41

37:                                               ; preds = %23
  %38 = load i32, i32* %9, align 4
  %39 = sext i32 %38 to i64
  %40 = udiv i64 %39, 4
  store i64 %40, i64* %4, align 8
  br label %41

41:                                               ; preds = %37, %36, %16
  %42 = load i64, i64* %4, align 8
  ret i64 %42
}

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @RtlMultiByteToUnicodeSize(i32*, i8*, i32) #1

declare dso_local i32 @RtlMultiByteToUnicodeN(i32*, i32, i32*, i8*, i32) #1

declare dso_local i32 @NT_SUCCESS(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
